# wavetheme-gen

./: Cargo.toml  default.nix  flake.nix  rustfmt.toml
src/: main.rs
