cargo-features = ["edition2024"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Zlinker-features=-lld"]

[package]
name = "theme"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.14"
knuffel = "3.2.0"
serde = { version = "1.0.203", features = ["derive"] }
palette = { version = "0.7.6", features = ["serde", "rand", "named", "named_from_str"] }
bmp = "0.5.0"
csv = "1.3.0"
rand = "0.8.5"
